1-add jayezehTakhfif view for each product 2-add sina akbari profile modifications 3-fix CreateRequestActivity navigations (paymentstate)